<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Caculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btndiv">/</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnmul">*</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnmin">-</string>
    <string name="btn0">0</string>
    <string name="btn00">=</string>
    <string name="btndec">.</string>
    <string name="btnadd">+</string>
    <string name="btnnull"></string>
    <string name="btndel">清除</string>
    <string name="btndelall">C</string>
    <string name="btnfal">!</string>
    

</resources>
